nginx-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  - port: 8080
    protocol: TCP
    name: tcp    
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: nginxsecret
      - name: configmap-volume1
        configMap:
          name: nginxconfigmap1
      - name: configmap-volume2
        configMap:
          name: nginxconfigmap2    
      containers:
      - name: nginx
        image: quay.io/yubolin/nginx
        command: 
        - 'sh'
        - '-c'
        - '/home/auto-reload-nginx.sh'
        ports:
        - containerPort: 443
        - containerPort: 80
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 5
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: secret-volume
        - mountPath: /etc/nginx/sites-enabled
          name: configmap-volume1
        - mountPath: /etc/nginx/sites-available
          name: configmap-volume2
